<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.citytech.kindergartensystem.Teachers.TeacherAdd">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp">

        <ImageView
            android:id="@+id/empImg"
            android:layout_width="220dp"
            android:layout_height="160dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            app:srcCompat="@color/colorPrimaryDark"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:hint="@string/full_name"
                android:id="@+id/empName"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/empDateLayout"
            android:layoutDirection="ltr"
            android:layout_marginTop="4dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_of_dirth"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_weight="3" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/empBDday"
                    android:hint="@string/day"
                    android:inputType="number"
                    android:layout_weight="1.5" />

            </android.support.design.widget.TextInputLayout>


            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/empBDmonth"
                android:hint="@string/month"
                android:layout_weight="1.5"
                android:inputType="number"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/empBDyear"
                android:hint="@string/year"
                android:layout_weight="3"
                android:inputType="number" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            >
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/empStat"
                android:layout_weight="1"
                android:padding="4dp"
                android:layout_gravity="center"
                android:entries="@array/status"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/children_number"
                android:inputType="text"
                android:layout_marginStart="4dp"
                android:id="@+id/empChildNo"
                android:visibility="gone"
                android:layout_weight="1"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/id_number"
            android:id="@+id/empId"
            android:inputType="number"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/Permanent_Residence_Address"
            android:id="@+id/empAddress"
            android:textColor="@color/black"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/empEmail"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/Mobile_number"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:id="@+id/empPhone"
                android:inputType="number"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/home_phone"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:id="@+id/empHomePhone"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:id="@+id/empDeg"
                android:entries="@array/state"
                android:layout_weight="1.2"
            />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/empUniSpec"
                android:layout_weight="1"
                android:hint="@string/Specialization"
                android:inputType="text"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/empGraYear"
                android:hint="@string/Graduation_Year"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/University"
                android:layout_marginEnd="4dp"
                android:id="@+id/empUniversity"
                android:inputType="text"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/average"
                android:layout_marginStart="4dp"
                android:id="@+id/empRank"
                android:inputType="numberDecimal"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
